--- a/app/src/main/res/layout/fragment_second_apply.xml
+++ b/app/src/main/res/layout/fragment_second_apply.xml
@@ -81,6 +81,7 @@
             android:layout_marginTop="16dp"
             android:fontFamily="@font/spoqa_han_sans_neo_regular"
             android:text="일정이없어요!"
+            android:textSize="16dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
