--- a/app/src/main/res/layout/item_send_timelist.xml
+++ b/app/src/main/res/layout/item_send_timelist.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:app="http://schemas.android.com/apk/res-auto"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
@@ -9,7 +10,7 @@
             type="org.seemeet.seemeet.data.model.response.invitation.SendInvitationDate" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -67,7 +68,7 @@
             android:id="@+id/iv_send_time_icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="2dp"
+            android:layout_marginEnd="4dp"
             android:src="@drawable/ic_friend_13"
             app:layout_constraintEnd_toStartOf="@id/tv_send_time_cnt"
             app:layout_constraintTop_toTopOf="@id/tv_send_time_respone" />
@@ -76,7 +77,8 @@
             android:id="@+id/tv_send_time_cnt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="7dp"
+            android:layout_marginEnd="17dp"
+            android:fontFamily="@font/din_pro_regular"
             android:text="@{String.valueOf(dateData.respondent.size())}"
             android:textSize="13dp"
             app:layout_constraintEnd_toStartOf="@id/tv_send_time_respone"
