[FEAT] 로그인 메인 화면에 개인정보 처리방침, 이용약관 링크

--- a/app/src/main/res/layout/activity_login_main.xml
+++ b/app/src/main/res/layout/activity_login_main.xml
@@ -107,11 +107,15 @@
             android:id="@+id/mypage_info2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:clickable="true"
             android:fontFamily="@font/spoqa_han_sans_neo_regular"
+            android:paddingTop="20dp"
+            android:paddingBottom="20dp"
             android:text="@string/login_main_info2"
             android:textColor="@color/gray05"
             android:textSize="12dp"
             android:textStyle="normal"
+            app:layout_constraintBottom_toBottomOf="@+id/mypage_info1"
             app:layout_constraintEnd_toStartOf="@+id/mypage_info3"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/mypage_info1"
@@ -126,6 +130,7 @@
             android:textColor="@color/gray05"
             android:textSize="12dp"
             android:textStyle="normal"
+            app:layout_constraintBottom_toBottomOf="@+id/mypage_info2"
             app:layout_constraintEnd_toStartOf="@+id/mypage_info4"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/mypage_info2"
@@ -135,11 +140,15 @@
             android:id="@+id/mypage_info4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:clickable="true"
             android:fontFamily="@font/spoqa_han_sans_neo_regular"
+            android:paddingTop="20dp"
+            android:paddingBottom="20dp"
             android:text="@string/login_main_info4"
             android:textColor="@color/gray05"
             android:textSize="12dp"
             android:textStyle="normal"
+            app:layout_constraintBottom_toBottomOf="@+id/mypage_info3"
             app:layout_constraintEnd_toStartOf="@+id/mypage_info5"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/mypage_info3"
@@ -155,6 +164,7 @@
             android:textColor="@color/gray05"
             android:textSize="12dp"
             android:textStyle="normal"
+            app:layout_constraintBottom_toBottomOf="@+id/mypage_info4"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/mypage_info4"
